<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".playerinput">

    <EditText
        android:id="@+id/editText40"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_2"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText46" />

    <EditText
        android:id="@+id/editText37"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_5"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText44" />

    <EditText
        android:id="@+id/editText38"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="24dp"
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_7"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toEndOf="@+id/editText46"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editText39"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="22dp"
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_3"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText40" />

    <EditText
        android:id="@+id/editText41"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_6"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText37" />

    <EditText
        android:id="@+id/editText42"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_8"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toEndOf="@+id/editText40"
        app:layout_constraintTop_toBottomOf="@+id/editText38" />

    <EditText
        android:id="@+id/editText43"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="12dp"
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_9"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toEndOf="@+id/editText39"
        app:layout_constraintTop_toBottomOf="@+id/editText42" />

    <EditText
        android:id="@+id/editText44"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_4"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText39" />

    <EditText
        android:id="@+id/editText45"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="12dp"
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_10"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toEndOf="@+id/editText44"
        app:layout_constraintTop_toBottomOf="@+id/editText43" />

    <EditText
        android:id="@+id/editText46"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_1"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editText47"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#56FFFFFF"
        android:ems="10"
        android:hint="@string/no_11"
        android:inputType="textPersonName"
        android:textColor="#020101"
        android:textColorHint="#6F1A0303"
        app:layout_constraintStart_toEndOf="@+id/editText37"
        app:layout_constraintTop_toBottomOf="@+id/editText45" />

    <EditText
        android:id="@+id/editText36"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="74dp"
        android:autofillHints=""
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_7"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editText26"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText32"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="20dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_11"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editText31"
        app:layout_constraintTop_toBottomOf="@+id/editText34" />

    <EditText
        android:id="@+id/editText33"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="28dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_9"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editText29"
        app:layout_constraintTop_toBottomOf="@+id/editText35" />

    <EditText
        android:id="@+id/editText34"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="20dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editText28"
        app:layout_constraintTop_toBottomOf="@+id/editText33" />

    <EditText
        android:id="@+id/editText35"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="28dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_8"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editText27"
        app:layout_constraintTop_toBottomOf="@+id/editText36" />

    <EditText
        android:id="@+id/editText31"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_5"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText28" />

    <EditText
        android:id="@+id/editText30"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_6"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText31" />

    <EditText
        android:id="@+id/editText28"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_4"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText29" />

    <EditText
        android:id="@+id/editText29"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_3"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText27" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title2"
        android:textColor="#000"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:text="Host team"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:text="Visitor team"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText30" />

    <EditText
        android:id="@+id/editText27"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText26" />

    <EditText
        android:id="@+id/editText26"
        android:layout_width="148dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="#00F1E0E0"
        android:ems="10"
        android:hint="@string/no_1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="16dp"
        android:text="Start match"
        android:background="#39ff14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>